# DesktopFinder

./: .gitignore  Cargo.toml  README.md
file-finder/: package-lock.json  package.json
file-finder/src/: App.css  App.js  AppContext.js  Results.js  config-storage.js  electron-starter.js
file-finder/src/components/: ResultCard.js  Results.js  SearchPage.js  SettingsPage.js
file-finder/src/context/: DictContext.js
file-finder/src/crawler/: Crawler.js
file-finder/src/storage/: storageUtils.js
src/: lib.rs
www/: index.html  index.js  package-lock.json  package.json
